# testpro-website

./: Cargo.toml  LICENSE  run_dev.sh
frontend/: Cargo.toml  Dioxus.toml  package.json  tailwind.css
frontend/assets/: dx-components-theme.css  main.css  style.css  tailwind.css
frontend/src/: main.rs
frontend/src/components/: about.rs  blog.rs  contact.rs  footer.rs  header.rs  hero.rs  mod.rs  services.rs
frontend/src/components/ui/: alert.rs  badge.rs  button.rs  card.rs  default_props.rs  dropdown.rs  mod.rs
