[package]
name = "frontend"
version = "0.1.0"
authors = ["Marcin Wionczyk <marcin.wionczyk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-web = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement"]}
lucide-dioxus = {  version = "2.34.0", features = ["all-icons"] }
accordion-rs = { version = "0.2.6", features = ["dio"] }
tw_merge = { version = "0.1.6", features = ["variant"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
strum = { version = "0.27", features = ["derive"] }
gloo = "0.11.0"
json = "0.12.4"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
